--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 				<div class="-content">
 					<h4>Sneaky Spider</h4>
 					<p>Sneaky Spider is a C# library for web crawling and scraping designed for simplicity and flexibility</p>
-					<a class="_alignCenter" href="https://github.com/binlabdev/sneakyspider">View Project on Github<i class="fa fa-external-link"></i></a>
+					<a class="_alignCenter" href="https://github.com/binlabdev/sneakyspider/blob/master/README.md">Details<i class="fa fa-external-link"></i></a>
+					<a style="float: right;" class="_alignCenter" href="https://github.com/binlabdev/sneakyspider">View Project<i class="fa fa-external-link"></i></a>
 				</div>
 			</div>
 		</div>
