--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<ul class="topnav _nightblue" id="myTopnav2">
-  		<li><a href="index.html" class="brand"><img src="bindevlogo.png" width="180px"></a></li>
+  		<li><a href="https://binlabdev.github.io" class="brand"><img src="bindevlogo.png" width="180px"></a></li>
   		<li><a href="#projects">Projects</a></li>
   		<li><a href="https://github.com/binlabdev">Github</a></li>
 	  	<li class="-icon">
@@ -34,8 +34,8 @@
 				<div class="-content">
 					<h4>Sneaky Spider</h4>
 					<p>Sneaky Spider is a C# library for web crawling and scraping designed for simplicity and flexibility</p>
-					<a class="_alignCenter" href="https://github.com/binlabdev/sneakyspider/blob/master/README.md">Details<i class="fa fa-external-link"></i></a>
-					<a style="float: right;" class="_alignCenter" href="https://github.com/binlabdev/sneakyspider">View Project<i class="fa fa-external-link"></i></a>
+					<a class="_alignCenter" href="https://github.com/binlabdev/sneakyspider/blob/master/README.md">Details <i class="fa fa-external-link"></i></a>
+					<a style="float: right;" class="_alignCenter" href="https://github.com/binlabdev/sneakyspider">View Project <i class="fa fa-external-link"></i></a>
 				</div>
 			</div>
 		</div>
