--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<ul class="topnav _nightblue" id="myTopnav2">
   		<li><a href="https://binlabdev.github.io" class="brand"><img src="bindevlogo.png" width="180px"></a></li>
   		<li><a href="#projects">Projects</a></li>
-  		<li><a href="https://github.com/binlabdev">Github</a></li>
+		<li><a href="https://github.com/binlabdev">Github</a></li>
+		<li><a href="https://www.facebook.com/binlab.bd">Facebook</a></li>
 	  	<li class="-icon">
 	    	<a href="javascript:void(0);" onclick="topnav('myTopnav2')">☰</a>
 	  	</li>
